--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
   <section>
     <h2>Чим ми займаємося</h2>
     <ul>
-      <li><img src="/images/box1.jpg" alt="крупным планом программист работает за своим столом в офисе"
+      <li><img src="images/box1.jpg" alt="крупным планом программист работает за своим столом в офисе"
         width=370 height=294></li>
-      <li><img src="/images/box2.jpg" alt="веб-дизайнеры пользовательского интерфейса разрабатывают приложения для смартфонов, работают над интерфейсом мобильных телефонов" 
+      <li><img src="images/box2.jpg" alt="веб-дизайнеры пользовательского интерфейса разрабатывают приложения для смартфонов, работают над интерфейсом мобильных телефонов" 
         width=370 height=294></li>
-      <li><img src="/images/box3.jpg" alt="креативный веб-дизайн художника с рабочим графическим планшетом"
+      <li><img src="images/box3.jpg" alt="креативный веб-дизайн художника с рабочим графическим планшетом"
         width=370 height=294></li>
     </ul>
   </section>
@@ -69,13 +69,13 @@
     <section>
       <h2>Наша команда</h2>
       <ul>
-        <li><img src="/images/teamcard1.jpg" alt="участник команды 1"
+        <li><img src="images/teamcard1.jpg" alt="участник команды 1"
           width=270 height=260></li>
-        <li><img src="/images/teamcard2.jpg" alt="участник команды 2" 
+        <li><img src="images/teamcard2.jpg" alt="участник команды 2" 
           width=270 height=260></li>
-        <li><img src="/images/teamcard3.jpg" alt="участник команды 3"
+        <li><img src="images/teamcard3.jpg" alt="участник команды 3"
           width=270 height=260></li>
-        <li><img src="/images/teamcard4.jpg" alt="участник команды 4"
+        <li><img src="images/teamcard4.jpg" alt="участник команды 4"
           width=270 height=260></li>
       </ul>
     </section>
