Добавляет в разметку  "main": Заменяет тег "input" на "button"

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
     </ul>
   </header>
 
+  <main>
   <!-- Секция 1 -->
   <section>
     <h1>Ефективні рішення для вашого бізнесу</h1>
-   <input type="button" value="Замовити послугу">
+    <button type="button">Замовити послугу</button>
   </section>
 
   <!-- Секция 2 -->
@@ -56,29 +57,30 @@
   <section>
     <h2>Чим ми займаємося</h2>
     <ul>
-      <li><img src="images/box1.jpg" alt="крупным планом программист работает за своим столом в офисе"
+      <li><img src="/images/box1.jpg" alt="крупным планом программист работает за своим столом в офисе"
         width=370 height=294></li>
-      <li><img src="images/box2.jpg" alt="веб-дизайнеры пользовательского интерфейса разрабатывают приложения для смартфонов, работают над интерфейсом мобильных телефонов" 
+      <li><img src="/images/box2.jpg" alt="веб-дизайнеры пользовательского интерфейса разрабатывают приложения для смартфонов, работают над интерфейсом мобильных телефонов" 
         width=370 height=294></li>
-      <li><img src="images/box3.jpg" alt="креативный веб-дизайн художника с рабочим графическим планшетом"
+      <li><img src="/images/box3.jpg" alt="креативный веб-дизайн художника с рабочим графическим планшетом"
         width=370 height=294></li>
     </ul>
   </section>
 
     <!-- Секция 4 -->
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
-        <li><img src="images/teamcard1.jpg" alt="участник команды 1"
-          width=270 height=260></li>
-        <li><img src="images/teamcard2.jpg" alt="участник команды 2" 
-          width=270 height=260></li>
-        <li><img src="images/teamcard3.jpg" alt="участник команды 3"
-          width=270 height=260></li>
-        <li><img src="images/teamcard4.jpg" alt="участник команды 4"
-          width=270 height=260></li>
-      </ul>
-    </section>
+  <section>
+    <h2>Наша команда</h2>
+    <ul>
+      <li><img src="/images/teamcard1.jpg" alt="участник команды 1"
+        width=270 height=260></li>
+      <li><img src="/images/teamcard2.jpg" alt="участник команды 2" 
+        width=270 height=260></li>
+      <li><img src="/images/teamcard3.jpg" alt="участник команды 3"
+        width=270 height=260></li>
+      <li><img src="/images/teamcard4.jpg" alt="участник команды 4"
+        width=270 height=260></li>
+    </ul>
+  </section>
+  </main>
     
     <!-- Футер -->
     <footer>
