Добавляет заголовок к секции 2

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
   <!-- Секция 2 -->
   <section>
+  <!-- Заголовок -->
+  <h2>Наши преимущества</h2>
+    
     <ul>
       <li>
         <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
@@ -57,11 +60,11 @@
   <section>
     <h2>Чим ми займаємося</h2>
     <ul>
-      <li><img src="/images/box1.jpg" alt="крупным планом программист работает за своим столом в офисе"
+      <li><img src="/images/box1.jpg" alt="программист работает в офисе"
         width=370 height=294></li>
-      <li><img src="/images/box2.jpg" alt="веб-дизайнеры пользовательского интерфейса разрабатывают приложения для смартфонов, работают над интерфейсом мобильных телефонов" 
+      <li><img src="/images/box2.jpg" alt="веб-дизайнеры разрабатывают приложения для смартфонов" 
         width=370 height=294></li>
-      <li><img src="/images/box3.jpg" alt="креативный веб-дизайн художника с рабочим графическим планшетом"
+      <li><img src="/images/box3.jpg" alt="креативный веб-дизайн художника с планшетом"
         width=370 height=294></li>
     </ul>
   </section>
