Вносит изменения в footer

--- a/index.html
+++ b/index.html
@@ -73,14 +73,22 @@
   <section>
     <h2>Наша команда</h2>
     <ul>
-      <li><img src="/images/teamcard1.jpg" alt="участник команды 1"
-        width=270 height=260></li>
-      <li><img src="/images/teamcard2.jpg" alt="участник команды 2" 
-        width=270 height=260></li>
-      <li><img src="/images/teamcard3.jpg" alt="участник команды 3"
-        width=270 height=260></li>
-      <li><img src="/images/teamcard4.jpg" alt="участник команды 4"
-        width=270 height=260></li>
+      <li><img src="/images/team1.jpg" alt="участник команды 1"
+        width=270 height=260>
+      <p>Ігор Дем'яненко<br>
+        Product Designer</p></li>
+      <li><img src="/images/team2.jpg" alt="участник команды 2" 
+        width=270 height=260>
+      <p>Ольга Рєпіна<br>
+        Frontend Developer</p></li>
+      <li><img src="/images/team3.jpg" alt="участник команды 3"
+        width=270 height=260>
+      <p>Микола Тарасов<br>
+        Marketing</p></li>
+      <li><img src="/images/team4.jpg" alt="участник команды 4"
+        width=270 height=260>
+      <p>Михайло Єрмаков<br>
+        UI Designer</p></li>
     </ul>
   </section>
   </main>
@@ -89,10 +97,11 @@
     <footer>
       <a href="/"> WebStudio</a>
       <address>
-       <p> м. Київ, пр-т Лесі Українки, 26 <br>
-        <a href="malito:info@devstudio.com">info@devstudio.comli</a><br>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-       </p>
+        <ul>
+          <li><a href="м. Київ, пр-т Лесі Українки, 26">м. Київ, пр-т Лесі Українки, 26</a><br></li>
+          <li><a href="malito:info@devstudio.com">info@devstudio.comli</a><br></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
 </body>
