--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <a href="/"> WebStudio</a>
       <address>
         <ul>
-          <li><a href="м. Київ, пр-т Лесі Українки, 26">м. Київ, пр-т Лесі Українки, 26</a><br></li>
+          <li><a href="https://www.google.com" target="_blank" rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a><br></li>
           <li><a href="malito:info@devstudio.com">info@devstudio.comli</a><br></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
