--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
   <section>
     <h2>Чим ми займаємося</h2>
     <ul>
-      <li><img src="/images/box1.jpg" alt="программист работает в офисе"
+      <li><img src="./images/box1.jpg" alt="программист работает в офисе"
         width=370 height=294></li>
-      <li><img src="/images/box2.jpg" alt="веб-дизайнеры разрабатывают приложения для смартфонов" 
+      <li><img src="./images/box2.jpg" alt="веб-дизайнеры разрабатывают приложения для смартфонов" 
         width=370 height=294></li>
-      <li><img src="/images/box3.jpg" alt="креативный веб-дизайн художника с планшетом"
+      <li><img src="./images/box3.jpg" alt="креативный веб-дизайн художника с планшетом"
         width=370 height=294></li>
     </ul>
   </section>
@@ -73,19 +73,19 @@
   <section>
     <h2>Наша команда</h2>
     <ul>
-      <li><img src="/images/team1.jpg" alt="участник команды 1"
+      <li><img src="./images/team1.jpg" alt="участник команды 1"
         width=270 height=260>
       <p>Ігор Дем'яненко<br>
         Product Designer</p></li>
-      <li><img src="/images/team2.jpg" alt="участник команды 2" 
+      <li><img src="./images/team2.jpg" alt="участник команды 2" 
         width=270 height=260>
       <p>Ольга Рєпіна<br>
         Frontend Developer</p></li>
-      <li><img src="/images/team3.jpg" alt="участник команды 3"
+      <li><img src="./images/team3.jpg" alt="участник команды 3"
         width=270 height=260>
       <p>Микола Тарасов<br>
         Marketing</p></li>
-      <li><img src="/images/team4.jpg" alt="участник команды 4"
+      <li><img src="./images/team4.jpg" alt="участник команды 4"
         width=270 height=260>
       <p>Михайло Єрмаков<br>
         UI Designer</p></li>
