--- a/index.html
+++ b/index.html
@@ -75,20 +75,20 @@
     <ul>
       <li><img src="./images/team1.jpg" alt="участник команды 1"
         width=270 height=260>
-      <p>Ігор Дем'яненко<br>
-        Product Designer</p></li>
+      <h3>Ігор Дем'яненко</h3>
+      <p>Product Designer</p></li>
       <li><img src="./images/team2.jpg" alt="участник команды 2" 
         width=270 height=260>
-      <p>Ольга Рєпіна<br>
-        Frontend Developer</p></li>
+        <h3>Ольга Рєпіна</h3>
+        <p>Frontend Developer</p></li>
       <li><img src="./images/team3.jpg" alt="участник команды 3"
         width=270 height=260>
-      <p>Микола Тарасов<br>
-        Marketing</p></li>
+        <h3>Микола Тарасов</h3>
+        <p> Marketing</p></li>
       <li><img src="./images/team4.jpg" alt="участник команды 4"
         width=270 height=260>
-      <p>Михайло Єрмаков<br>
-        UI Designer</p></li>
+        <h3>Михайло Єрмаков</h3>
+        <p>UI Designer</p></li>
     </ul>
   </section>
   </main>
@@ -98,7 +98,7 @@
       <a href="/"> WebStudio</a>
       <address>
         <ul>
-          <li><a href="https://www.google.com" target="_blank" rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a><br></li>
+          <li><a href="https://www.google.com" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a><br></li>
           <li><a href="malito:info@devstudio.com">info@devstudio.comli</a><br></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
